Replaced Collections.singleton methods with Java 8 equivalents