@@ -12,7 +12,7 @@ import org.springframework.mail.javamail.JavaMailSender;
 import uk.co.serin.thule.email.domain.model.Attachment;
 import uk.co.serin.thule.email.domain.model.Email;
 
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -39,7 +39,7 @@ public class EmailServiceTest {
     public void given_an_exception_when_sending_an_email_then_a_email_service_exception_is_thrown() {
         // Given
         var expectedEmail =
-                Email.builder().body("This is the content").from("from@test.co.uk").subject("This is a test email").tos(Collections.singleton("to@test.co.uk"))
+                Email.builder().body("This is the content").from("from@test.co.uk").subject("This is a test email").tos(Set.of("to@test.co.uk"))
                      .build();
 
         given(mailSender.createMimeMessage()).willReturn(mimeMessage);
@@ -55,9 +55,9 @@ public class EmailServiceTest {
     @Test
     public void when_sending_an_email_with_all_fields_set_then_an_email_is_sent_and_returned() throws ExecutionException, InterruptedException {
         // Given
-        var attachments = Collections.singleton(Attachment.builder().content("This is a test attachment").label("test-attachment.txt").build());
-        var expectedEmail = Email.builder().attachments(attachments).bccs(Collections.singleton("bcc@test.co.uk")).body("This is a test body")
-                                 .ccs(Collections.singleton("ccs@test.co.uk")).from("from@test.co.uk").subject("Test subject")
+        var attachments = Set.of(Attachment.builder().content("This is a test attachment").label("test-attachment.txt").build());
+        var expectedEmail = Email.builder().attachments(attachments).bccs(Set.of("bcc@test.co.uk")).body("This is a test body")
+                                 .ccs(Set.of("ccs@test.co.uk")).from("from@test.co.uk").subject("Test subject")
                                  .tos(Stream.of("to1@test.co.uk", "to2@test.co.uk", "to3@test.co.uk").collect(Collectors.toSet())).build();
 
         given(mailSender.createMimeMessage()).willReturn(mimeMessage);
@@ -73,7 +73,7 @@ public class EmailServiceTest {
     @Test
     public void when_sending_an_email_with_only_bcc_then_an_email_is_sent() throws ExecutionException, InterruptedException {
         // Given
-        var expectedEmail = Email.builder().bccs(Collections.singleton("bcc@test.co.uk")).body("This is the content").from("from@test.co.uk")
+        var expectedEmail = Email.builder().bccs(Set.of("bcc@test.co.uk")).body("This is the content").from("from@test.co.uk")
                                  .subject("This is a test email").build();
 
         given(mailSender.createMimeMessage()).willReturn(mimeMessage);
@@ -89,7 +89,7 @@ public class EmailServiceTest {
     @Test
     public void when_sending_an_email_without_a_from_then_an_email_is_sent() throws ExecutionException, InterruptedException {
         // Given
-        var expectedEmail = Email.builder().body("This is the content").subject("This is a test email").tos(Collections.singleton("to@test.co.uk")).build();
+        var expectedEmail = Email.builder().body("This is the content").subject("This is a test email").tos(Set.of("to@test.co.uk")).build();
 
         given(mailSender.createMimeMessage()).willReturn(mimeMessage);
 
@@ -117,8 +117,8 @@ public class EmailServiceTest {
     public void when_sending_an_email_without_bccs_then_an_email_is_sent() throws ExecutionException, InterruptedException {
         // Given
         var expectedEmail =
-                Email.builder().body("This is the content").ccs(Collections.singleton("cc@test.co.uk")).from("from@test.co.uk").subject("This is a test email")
-                     .tos(Collections.singleton("to@test.co.uk")).build();
+                Email.builder().body("This is the content").ccs(Set.of("cc@test.co.uk")).from("from@test.co.uk").subject("This is a test email")
+                     .tos(Set.of("to@test.co.uk")).build();
 
         given(mailSender.createMimeMessage()).willReturn(mimeMessage);
 
@@ -133,8 +133,8 @@ public class EmailServiceTest {
     @Test
     public void when_sending_an_email_without_ccs_then_an_email_is_sent() throws ExecutionException, InterruptedException {
         // Given
-        var expectedEmail = Email.builder().bccs(Collections.singleton("bcc@test.co.uk")).body("This is the content").from("from@test.co.uk")
-                                 .subject("This is a test email").tos(Collections.singleton("to@test.co.uk")).build();
+        var expectedEmail = Email.builder().bccs(Set.of("bcc@test.co.uk")).body("This is the content").from("from@test.co.uk")
+                                 .subject("This is a test email").tos(Set.of("to@test.co.uk")).build();
 
         given(mailSender.createMimeMessage()).willReturn(mimeMessage);
 
@@ -150,7 +150,7 @@ public class EmailServiceTest {
     public void when_sending_an_email_without_tos_then_an_email_is_sent() throws ExecutionException, InterruptedException {
         // Given
         var expectedEmail =
-                Email.builder().bccs(Collections.singleton("bcc@test.co.uk")).body("This is the content").ccs(Collections.singleton("cc@test.co.uk"))
+                Email.builder().bccs(Set.of("bcc@test.co.uk")).body("This is the content").ccs(Set.of("cc@test.co.uk"))
                      .from("from@test.co.uk").subject("This is a test email").build();
 
         given(mailSender.createMimeMessage()).willReturn(mimeMessage);
