@@ -3,7 +3,7 @@ package uk.co.serin.thule.security.oauth2.utils;
 import org.junit.Test;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -12,7 +12,7 @@ public class Oauth2UtilsTest {
     public void when_createJwtOauth2AccessToken_then_an_instance_is_created() {
         // When
         var jwtOauth2AccessToken = Oauth2Utils
-                .createJwtOauth2AccessToken("userName", 1234567890, Collections.singleton(new SimpleGrantedAuthority("grantedAuthority")),
+                .createJwtOauth2AccessToken("userName", 1234567890, Set.of(new SimpleGrantedAuthority("grantedAuthority")),
                         "clientId", "signingKey");
 
         // Then
@@ -23,7 +23,7 @@ public class Oauth2UtilsTest {
     public void when_createPhpJwtOauth2AccessToken_then_an_instance_is_created() {
         // When
         var jwtOauth2AccessToken = Oauth2Utils
-                .createPhpJwtOauth2AccessToken("userName", 1234567890, Collections.singleton(new SimpleGrantedAuthority("grantedAuthority")),
+                .createPhpJwtOauth2AccessToken("userName", 1234567890, Set.of(new SimpleGrantedAuthority("grantedAuthority")),
                         "clientId", "signingKey");
 
         // Then
